--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <textarea
       id="InputField"
       class="InputField"
-      placeholder="Collez ici une exportation précédente ou les résultats de $mmas"
+      placeholder="Collez ici une exportation précédente ou les résultats de $mmai-s"
     ></textarea>
     <textarea
       id="OutputField"
